fix: change png to webp and add some conf for deploy

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <div class="projects-section">
             <div class="projects-grid">
               <div class="project-card">
-                <img src="public/518shots_so.png" alt="Sistema ERP Bazar Matías" class="project-image">
+                <img src="public/bazar_matias_erp.webp" alt="Sistema ERP Bazar Matías" class="project-image">
                 <div class="project-info">
                   <h4 class="project-title">Sistema ERP - Bazar Matías</h4>
                   <p class="project-description">Sistema completo de gestión empresarial para bazar
@@ -306,7 +306,7 @@
                 </div>
               </div>
               <div class="project-card">
-                <img src="public/690shots_so.png" alt="App Wave - Plataforma Musical" class="project-image">
+                <img src="public/wave_app.webp" alt="App Wave - Plataforma Musical" class="project-image">
                 <div class="project-info">
                   <h4 class="project-title">App Wave</h4>
                   <p class="project-description">Plataforma de streaming musical desarrollada con tecnologías modernas,
@@ -314,7 +314,7 @@
                 </div>
               </div>
               <div class="project-card">
-                <img src="public/285shots_so.png" alt="Simulador Clínico" class="project-image">
+                <img src="public/rceua.webp" alt="Simulador Clínico" class="project-image">
                 <div class="project-info">
                   <h4 class="project-title">Registro Clínico Electrónico Simulado</h4>
                   <p class="project-description">Herramienta educativa para estudiantes de medicina que simula registros
