--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/src/styles/styles.css">
+  <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 
 <body>
