dis: disabled resume download for moment

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a href="https://github.com/AlessandroRLM" class="contact-item color-github" target="_blank">
                 <img src="./public/github.svg" class="svg-icon" alt="GitHub"> GitHub
               </a>
-              <a id="resume-download-link" class="contact-item" target="_blank">
+              <a id="resume-download-link-disabled" class="contact-item" target="_blank">
                 <img src="./public/resume.svg" class="svg-icon" alt="Resume"> 
                 <span data-es="Currículum" data-en="Resume">Currículum</span>
               </a>
